Fix toggler icon so that it is visible

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,15 +13,19 @@ body {
 
 /* ----------------------------------Home Page---------------------------------- */
 /* ----------------------------------Navbar---------------------------------- */
-
 nav.navbar {
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.25);
   padding-top: 0;
   padding-bottom: 0;
 }
 
 nav.activity-page-nav {
   background-color: #31bee9;
+}
+
+button.navbar-toggler {
+  border: none;
+  font-size: 1.50rem;
 }
 
 .navbar-brand {
@@ -135,7 +139,7 @@ ul.social-icons {
 
 /* ----------------------------------Hero Text---------------------------------- */
 div.hero-text-overlay {
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.25);
   position: absolute;
   left: 0;
   right: 0;
@@ -159,15 +163,16 @@ p.hero-text {
 
 @media screen and (min-width: 576px) {
   div.hero-text-overlay {
-    background-color: rgba(0, 0, 0, 0.5);
-    top: 70%;
     right: 30%;
+    top: 70%;
     width: 45%;
     padding: 20px;
   }
+
   h1.hero-heading {
     font-size: 38px;
   }
+
   p.hero-text {
     font-size: 22px;
   }
@@ -178,6 +183,7 @@ p.hero-text {
     right: 60%;
     width: 28%;
   }
+
   p.hero-text {
     font-size: 18px;
   }
